Fixing permission small issue

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -1108,6 +1108,7 @@
       }
       .phase-details{
         margin-left: 70px;
+        margin-right: 10px;
       }
     }
   }
@@ -1135,5 +1136,9 @@
 
   .clock-box{
     padding: 0 !important;
+  }
+
+  .next-green-step{
+    width: 100%;
   }
 }
